# txt-ui

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
register/: forms.py  models.py  urls.py  views.py
register/migrations/: 0001_initial.py
register/templates/: index.html
register/templates/auth/: base.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
register/templates/auth/email/: password_reset_email.html  password_reset_subject.html
system/: settings.py  urls.py
templates/: 400.html  403.html  404.html  500.html
txt/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
txt/migrations/: 0001_initial.py  0002_alter_textdocument_date_modified_and_more.py  0003_remove_textdocument_time_created_and_more.py  0004_remove_textdocument_time_modified_and_more.py  0005_alter_textdocument_date_modified.py  0006_alter_textdocument_content_mainfolder.py  0007_delete_mainfolder.py
txt/templates/txt/: base.html  create_txt.html  detail_txt.html  home.html  update_txt.html  upload_txt.html
txtapp/: views.py
txtapp/templates/txt/: base.html  create_txt.html  detail_txt.html  home.html  update_txt.html  upload_txt.html
