[metadata]
name = txt-ui
version = 0.0.1
description = A Django app to create, upload, update, delete and download txt documents
long_description = file: README.md
author = Immanuel Njuguna
author_email = njugunaimmanuel1@outlook.com
license = MIT # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    asgiref >= 3.6.0
    Django >= 4.2.1
    django-bootstrap5 >= 23.1
    django-ckeditor >= 6.5.1
    django-js-asset >= 2.0.0
    sqlparse >= 0.4.4
    tzdata >= 2023.3
